FCAI-5 <replaced getSize( ) , added sonar-maven dependency>

--- a/pom.xml
+++ b/pom.xml
@@ -537,6 +537,11 @@
 		</resources>
 		<plugins>
 			<plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>sonar-maven-plugin</artifactId>
+			    <version>3.0.2</version>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.2.0</version>
