--- a/pom.xml
+++ b/pom.xml
@@ -569,6 +569,11 @@
 				</configuration>
 			</plugin>
 			<plugin>
+	            <groupId>org.sonarsource.scanner.maven</groupId>
+	            <artifactId>sonar-maven-plugin</artifactId>
+	            <version>${sonar-maven-plugin.version}</version>
+        	</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
@@ -760,6 +765,8 @@
 	</build>
 
 	<properties>
+	    <sonar.version>9.5</sonar.version>
+	    <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
 		<sonar.organization>the-programming-collective</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
   		<sonar.sources>JavaSource</sonar.sources>
